Ajustes mensagens (fix de mensagem múltipla + dark mode)

--- a/public/assets/css/gastos/gastos-dark.css
+++ b/public/assets/css/gastos/gastos-dark.css
@@ -92,3 +92,7 @@ input {
 .pin {
   color: #ffffff;
 }
+
+.pin-input {
+  color: #E2E2E2;
+}
