--- a/public/assets/css/gastos/gastos.css
+++ b/public/assets/css/gastos/gastos.css
@@ -195,7 +195,7 @@ h6 {
   box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15), 0 6px 12px 0 rgba(24, 94, 224, 0.15);
   padding: 0.75rem;
   border-radius: 99px;
-  transform: scale(0.6);
+  transform: scale(0.7);
 }
 
 .tabs * {
@@ -618,4 +618,8 @@ input {
   font-size: 20px;
   text-align: center;
   display: none;
+}
+
+.pin-input {
+  color: #272829;
 }
